API_Reference_MDX/milvus-restful/v3.0.x/v2/Index (v2)/Alter Properties.mdx
---
displayed_sidebar: restfulSidebar
sidebar_positition: 2
slug: /restful/Alter Properties
beta: FALSE
title: "Alter Index Properties | RESTful"
description: "This operation alters the properties of an index. | RESTful"
hide_table_of_contents: true
sidebar_label: "Alter Index Properties"
sidebar_custom_props:
  badges:
    - "post"
keywords: 
  - zilliz cloud
  - zilliz
  - cloud
  - "Alter Index Properties"
  - "post"
  - RESTful
  - API
---

# Alter Index Properties

import RestSpecs from '@site/src/components/RestSpecs';

<RestSpecs specs={specs} endpoint={endpoint} method={method} target="milvus" lang="en-US" />

export const specs = {"summary":"Alter Index Properties","deprecated":false,"description":"This operation alters the properties of an index.","x-i18n":{"zh-CN":{"summary":"修改索引属性","description":"本操作修改索引属性。"},"ja-JP":{"summary":"インデックスプロパティの変更","description":"この操作は、インデックスのプロパティを変更します。"}},"tags":["Index Operations (V2)"],"x-base-urls":[{"key":"cluster","label":"Cluster Endpoint","url":"https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530","prompt":"Use the cluster endpoint if you are using serving clusters.\n<ul><li><p><b>Free & Serverless</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>","x-i18n":{"zh-CN":{"label":"集群端点","prompt":"如果您使用的是服务集群，请使用集群端点。\n<ul><li><p><b>Free 与 Serverless 版</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated 版</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>"},"ja-JP":{"label":"クラスターエンドポイント","prompt":"サービングクラスターを使用している場合は、クラスターエンドポイントを使用してください。\n<ul><li><p><b>Free & Serverless</b></p><p><code>https://{cluster-id}.serverless.{region}.vectordb.zillizcloud.com</code></p></li><li><p><b>Dedicated</b></p><p><code>https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530</code></p></li></ul>"}},"shell":"export CLUSTER_ENDPOINT=\"https://{cluster-id}.{region}.vectordb.zillizcloud.com:19530\""},{"key":"on-demand-compute","label":"Project Endpoint (On-Demand)","url":"https://{project-id}.{region}.api.zillizcloud.com","prompt":"<p>Use the on-demand compute endpoint if you are using on-demand clusters.</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>","x-i18n":{"zh-CN":{"label":"项目端点（按需）","prompt":"<p>如果您使用的是按需集群，请使用项目端点（按需）。</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>"},"ja-JP":{"label":"プロジェクトエンドポイント（オンデマンド）","prompt":"<p>オンデマンドクラスターを使用している場合は、オンデマンドコンピュートエンドポイントを使用してください。</p><p><code>https://{project-id}.{region}.api.zillizcloud.com</code></p>"}},"shell":"export PROJECT_ENDPOINT=\"https://{project-id}.{region}.api.zillizcloud.com\""}],"parameters":[{"name":"Authorization","in":"header","description":"The authentication token should be <include target=\"zilliz\">an API key with appropriate privileges or </include>a pair of colon-joined username and password, like `username:password`. If you are using a project endpoint, only a valid API key with sufficient permissions applies.","required":true,"example":"Bearer {{TOKEN}}","schema":{"type":"string","x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"x-i18n":{"zh-CN":{"description":"认证令牌，应为<include target=\"zilliz\">具备适当权限的 API 密钥或</include>用冒号分隔的用户名和密码，如 `username:password`。如果您使用的是项目端点，则仅具备足够权限的有效 API 密钥适用。"},"ja-JP":{"description":"認証トークンは、<include target=\"zilliz\">適切な権限を持つ API key または </include>`username:password` のようにコロンで結合された username と password の組み合わせである必要があります。project endpoint を使用している場合は、十分な権限を持つ有効な API key のみが使用できます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}],"requestBody":{"content":{"application/json":{"schema":{"type":"object","properties":{"dbName":{"type":"string","description":"The name of the database which the collection belongs to. Setting this to a non-existing database results in an error. If not specified, the default database applies.","x-i18n":{"ja-JP":{"description":"コレクションが属するデータベースの名前です。存在しないデータベースを指定するとエラーになります。指定しない場合は、デフォルトデータベースが適用されます。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"collectionName":{"type":"string","description":"The name of the target collection.\nSetting this to a non-existing collection results in an error.","x-i18n":{"ja-JP":{"description":"対象コレクションの名前です。\n存在しないコレクションを指定するとエラーになります。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"indexName":{"type":"string","description":"The name of the target index.","x-i18n":{"zh-CN":{"description":"目标索引的名称。"},"ja-JP":{"description":"対象インデックスの名前です。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"properties":{"type":"object","description":"The new index parameters to be set.","x-i18n":{"zh-CN":{"description":"要设置的新索引参数。"},"ja-JP":{"description":"設定する新しいインデックスパラメータです。"}},"properties":{"mmap.enabled":{"type":"boolean","description":"Whether to enable memory mapping for the current index.","x-i18n":{"zh-CN":{"description":"是否为当前索引启用内存映射。"},"ja-JP":{"description":"現在のインデックスに対してメモリマッピングを有効にするかどうか。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"indexoffsetcache.enabled":{"type":"boolean","description":"Whether to cache the index offset in memory.","x-i18n":{"zh-CN":{"description":"是否将索引偏移量缓存在内存中。"},"ja-JP":{"description":"インデックスオフセットをメモリ内にキャッシュするかどうか。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"warmup":{"type":"boolean","description":"Whether to warm up the index.<ul><li><b>sync</b>: Warm up before a segment is considered loaded</li><li><b>async</b>: Warm up in background after load</li><li><b>disable</b>: Do not proactively warm up; load on demand</li></ul>","x-i18n":{"zh-CN":{"description":"是否预热索引。<ul><li><b>sync</b>: 在一个 segment 被认为已加载之前进行预热</li><li><b>async</b>: 在加载后后台进行预热</li><li><b>disable</b>: 不主动预热；按需加载</li></ul>"},"ja-JP":{"description":"インデックスをウォームアップするかどうか。<ul><li><b>sync</b>: セグメントがロード済みと見なされる前にウォームアップします</li><li><b>async</b>: ロード後にバックグラウンドでウォームアップします</li><li><b>disable</b>: 事前ウォームアップは行わず、必要時にロードします</li></ul>"}},"enum":["sync","async","disable"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"required":["indexName","collectionName","properties"],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"example":{"collectionName":"test_collection","indexName":"my_vector","properties":{"mmap.enabled":true}}}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"responses":{"200":{"description":"Returns an empty response.","x-i18n":{"zh-CN":{"description":"返回空响应。"},"ja-JP":{"description":"空のレスポンスを返します。"}},"content":{"application/json":{"schema":{"oneOf":[{"x-tab-label":"success","type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"},"ja-JP":{"description":"レスポンスコード。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"data":{"type":"object","properties":{},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},{"x-tab-label":"failure","description":"Returns an error message.","x-i18n":{"zh-CN":{"description":"返回错误消息。"},"ja-JP":{"description":"エラーメッセージを返します。"}},"type":"object","properties":{"code":{"type":"integer","description":"Response code.","x-i18n":{"zh-CN":{"description":"响应码。"},"ja-JP":{"description":"レスポンスコード。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"message":{"type":"string","description":"Error message.","x-i18n":{"zh-CN":{"description":"错误描述。"},"ja-JP":{"description":"エラーメッセージ。"}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}],"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null},"examples":{"1":{"summary":"success","x-target-response":"OPTION 1","value":{"code":0,"cost":0,"data":{}}},"2":{"summary":"failure","x-target-response":"OPTION 2","value":{"code":1800,"message":"User hasn't authenticated"}}}}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}},"x-added-at":"2.6.x","x-last-modified":"2.6.x","x-deprecated-since":null}
export const endpoint = "/v2/vectordb/indexes/alter_properties"
export const method = "post"
